--- a/index.html
+++ b/index.html
@@ -410,9 +410,10 @@
                 </div>
                  <div class="col-md-2 col-sm-6 col-xs-12">
                     <div class="foot-social">
-                        <i class="fa fa-facebook" aria-hidden="true"></i>
-                        <i class="fa fa-twitter" aria-hidden="true"></i>
-                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                        <i class="fa fa-facebook1" aria-hidden="true"></i>
+                        <i class="fa fa-twitter1" aria-hidden="true"></i>
+                        <i class="fa fa-instagram1" aria-hidden="true"></i>
+                        <div class="up up-opa"></div>
                     </div>
                 </div>
             </div>
