--- a/index.html
+++ b/index.html
@@ -367,23 +367,22 @@
     <section id="ftr">
         <div class="container">
             <div class="row row-f">
-                <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="col-md-3 col-sm-6 col-xs-12 col-f">
                     <p class="ftr-title">Come Find us</p>
                     <div class="ftr-text">
                         <p>12345 North Main Street</p>
                         <p>New York, NY 555555</p>
                         <p>Phone: 1.800.555.6789</p>
-                        <p>Email: support@theme-fusion.com</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="col-md-3 col-sm-6 col-xs-12 col-f">
                     <p class="ftr-title">Recent Posts</p>
                     <div class="ftr-text">
                         <p class="ftr-bott">Train with free weights or your body weight?</p>
                         <p class="ftr-bott">Nutritional advice that will keep you training</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="col-md-3 col-sm-6 col-xs-12 col-f">
                     <p class="ftr-title">Openings Times</p>
                     <div class="ftr-text">
                         <p>Weekdays Monday - Friday</p>
@@ -392,7 +391,7 @@
                         <p class="ftr-hours">09:00 - 21:00</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="col-md-3 col-sm-6 col-xs-12 col-f">
                     <div class="ftr-img">
                         <img src="img/result/ftr.jpg" alt="ftr" >
                     </div>
