--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
     <section id="main">
         <div class="container">
             
-                <div class="nav-button">
-                    <a href="#" class="btn-open" id="nav-menu"></a>
-                </div>
-                <div class="overlay">
-                    <div class="nav-overlay">
+        <div class="button">
+            <a href="#" id="nav-menu" class="btn-open"></a>
+        </div>
+        <div class="overlay">
+            <div class="nav-container">
+                <div class="nav-overlay">
                         <ul>
                             <li><a href="#">Lorem Ipsum</a></li>
                             <li><a href="#">Lorem Ipsum</a></li>
@@ -33,8 +34,9 @@
                             <li><a href="#">Lorem Ipsum</a></li>
                             <li><a href="#">Lorem Ipsum</a></li>
                         </ul>
-                    </div>
                 </div>
+            </div>
+        </div>
             
             <header>
                 <div class="row">
