--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                 <div class="nav-container">
                     <div class="nav-overlay">
                             <ul>
-                                <li><a href="#">Lorem Ipsum</a></li>
-                                <li><a href="#">Lorem Ipsum</a></li>
-                                <li><a href="#">Lorem Ipsum</a></li>
-                                <li><a href="#">Lorem Ipsum</a></li>
-                                <li><a href="#">Lorem Ipsum</a></li>
+                                <li><a href="#" class="scrollTo">Home</a></li>
+                                <li><a href="#perform" class="scrollTo">Perfomance</a></li>
+                                <li><a href="#trainers" class="scrollTo">Trainers</a></li>
+                                <li><a href="#result" class="scrollTo">Results</a></li>
+                                <li><a href="#join" class="scrollTo">Join us</a></li>
                             </ul>
                     </div>
                 </div>
